@@ -1,13 +1,16 @@
 using PaperMarioItems.Content.Buffs;
 using Terraria;
 using Terraria.ID;
+using Terraria.Localization;
 using Terraria.ModLoader;
 
 namespace PaperMarioItems.Content.Items.Consumables
 { 
 	public class VoltMushroom : ModItem
 	{
-		public override void SetDefaults()
+        private int effectTime = 3;
+        public override LocalizedText Tooltip => base.Tooltip.WithFormatArgs(effectTime);
+        public override void SetDefaults()
 		{
 			Item.width = 40;
 			Item.height = 40;
@@ -21,7 +24,7 @@ namespace PaperMarioItems.Content.Items.Consumables
             Item.rare = ItemRarityID.Orange;
             Item.value = Item.buyPrice(silver: 10);
 			Item.buffType = PMBuffID.Electrified;
-			Item.buffTime = 10800;
+			Item.buffTime = effectTime*60*60;
         }
         public override void OnConsumeItem(Player player)
         {
