@@ -1,10 +1,11 @@
 Paper Mario Items 0.2.0 -- Update notes
 COOKING CHANGES
-- Added Fruit Parfait, Healthy Salad, Heartful Cake, Honey Candy, Honey Mushroom, Honey Super, Honey Ultra, Icicle Pop, Jelly Candy, Jelly Mushroom, Jelly Super, Jelly Ultra, Koopa Bun, Mango Delight, Love Pudding, Maple Mushroom, Maple Super, Maple Ultra, Meteor Meal, Omelette Meal, Peach Tart, Spicy Soup, Snow Bunny, Couple's Cake
+- Added Fruit Parfait, Healthy Salad, Heartful Cake, Honey Candy, Honey Mushroom, Honey Super, Honey Ultra, Icicle Pop, Jelly Candy, Jelly Mushroom, Jelly Super, Jelly Ultra, Koopa Bun, Mango Delight, Love Pudding, Maple Mushroom, Maple Super, Maple Ultra, Meteor Meal, Omelette Meal, Peach Tart, Spicy Soup, Snow Bunny, Couple's Cake, Zess Cookie
 - Added cooking recipes for the above items
 - Cooking recipe for Fried Egg (Paper Mario) is now Pre-Hardmode exclusive
 - Added Hardmode-exclusive cooking recipe for Fried Egg (vanilla Terraria)
 - Added additional cooking recipes for Thunder Rage (Dried Bouquet + Volt Mushroom) and Volt Mushroom
+- Added recipes that use Mystery Box (50% chance to receive an item, 50% chance to receive a Mistake)
 - Fixed 2 incorrect cooking recipes for Mushroom Roast
 - Made minor adjustments to the feel of the cooking menu
 - Fixed wrong item use animations and according sound effects assigned to Honey Candy and Jelly Candy
